--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
 #Sun Feb 08 19:28:05 EST 2015
 app.grails.version=2.4.4
-app.name=WhatCanIDoWith
+app.name=Aurinomicon
 app.version=0.1
